--- a/Distributions.Web/Content/print.css
+++ b/Distributions.Web/Content/print.css
@@ -36,7 +36,7 @@ tfoot {
     display: table-footer-group;
 }
 
-.table-report {
+.table-report-customer {
     margin: 0 !important;
 }
 
